--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                     <p>Starting fresh in coaching feels both vulnerable and authentic. It's a return to what has always been truest about me: an almost overwhelming desire to help others flourish, paired with a deep belief in the transformative power of compassionate attention.</p>
                 </div>
                 <div class="about-image">
-                    <img src="data:image/svg+xml,%3Csvg width='400' height='300' xmlns='http://www.w3.org/2000/svg'%3E%3Crect width='400' height='300' fill='%23f5f2ed'/%3E%3Ctext x='200' y='140' text-anchor='middle' fill='%235d4e37' font-size='14' font-family='serif'%3EJill's Portrait%3C/text%3E%3Ctext x='200' y='160' text-anchor='middle' fill='%235d4e37' font-size='14' font-family='serif'%3EHere%3C/text%3E%3C/svg%3E" alt="Jill Ren Professional Portrait">
+                    <img src="jill-portrait.jpg" alt="Jill Ren Professional Portrait">
                 </div>
             </div>
         </div>
