--- a/index.html
+++ b/index.html
@@ -299,6 +299,7 @@
         /* Why Coaching Section */
         .why-coaching {
             background: var(--cream-white);
+            padding-top: 3rem;
         }
 
         .why-coaching-content {
