--- a/index.html
+++ b/index.html
@@ -698,7 +698,7 @@
                 <p>Fill out the form below to set up a complimentary 15-minute "let's connect" session. No pressure, just an authentic conversation to see if we're aligned for a coaching relationship.</p>
             </div>
 
-            <form class="contact-form" action="https://formspree.io/f/xdkojkvo" method="POST" onsubmit="handleSubmit(event)">
+            <form class="contact-form" action="https://formspree.io/f/xldndrkb" method="POST" onsubmit="handleSubmit(event)">
                 <div class="form-group">
                     <label for="name">Your Name</label>
                     <input type="text" id="name" name="name" required>
