--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jill Ren Coaching - Transform Through Connection</title>
+    <title>Jill Ren Serendipity Coaching - Transform Through Connection</title>
     <link href="https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;1,400&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
         * {
@@ -556,7 +556,7 @@
     <nav id="navbar">
         <div class="container">
             <div class="nav-container">
-                <div class="logo">Jill Ren Coaching</div>
+                <div class="logo">Jill Ren Serendipity Coaching</div>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#services">Services</a></li>
@@ -708,7 +708,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Jill Ren Coaching. Created with care for transformative conversations.</p>
+            <p>&copy; 2025 Jill Ren Serendipity Coaching. Created with care for transformative conversations.</p>
         </div>
     </footer>
 
