--- a/index.html
+++ b/index.html
@@ -571,16 +571,11 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Transform Through Connection</h1>
-                <p class="subtitle">Where deep conversations meet meaningful change</p>
+                <h1>Discover the Beautiful Unexpected</h1>
+                <p class="subtitle">Where serendipity meets intentional growth</p>
                 <p>You have everything you need to create an extraordinary life.</p>
-                <p>The vision. The dreams. The values that matter most to you.</p>
-                <p>But sometimes life gets noisy. Busy. Complicated.</p>
-                <p>Sometimes you need someone who believes in your potential as much as you do — and helps you cut through the noise to hear your own voice clearly.</p>
-                <p>That's where I come in.</p>
-                <p>I'm here to help you create your best life from within. Not by fixing what's wrong, but by amplifying what's already right. Not by giving you answers, but by helping you trust the wisdom you already carry.</p>
-                <p>Your best life isn't out there waiting to be found.</p>
-                <p>It's in here, waiting to be created.</p>
+                <p>Sometimes the most beautiful discoveries happen when we stop trying so hard and start paying attention.</p>
+                <p>I'm here to help you discover the beautiful unexpected — those serendipitous moments where clarity meets possibility, where purpose finds you instead of the other way around.</p>
                 <a href="#contact" class="cta-button">Let's Talk</a>
             </div>
         </div>
